--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Lists</title>
 </head>
-<body>
-$END$
+<body onload="get()">
+<form>
+    <label for="list-name">Name</label>
+    <input type="text" id="list-name" required>
+    <button type="button" onclick="post()">Add</button>
+</form>
+<div id="json-container"></div>
+<script src="script.js"></script>
 </body>
 </html>
